# firmware-otaq

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/workflows/: build-ota.yml
components/miniz/: miniz.h
components/monocypher/: CMakeLists.txt  monocypher.h
components/unzipLIB/: CMakeLists.txt
main/: CMakeLists.txt  battery_voltage.c  battery_voltage.h  ecdsa_verify_p256.c  ecdsa_verify_p256.h  ecdsa_verify_p256_esp32.c  ecdsa_verify_p256_esp32.h  ecdsa_verify_p384.c  ecdsa_verify_p384.h  fullchain.h  main.c  mqtt_app.c  nvs_util.c  nvs_util.h  ota_updater.c  ota_updater.h  sensor_task.c  wifi_connect.c
main/certs/: chain_cert.h  fullchain.h  pub_ecdsa256.h  root_cert.h
unity-app/: CMakeLists.txt  test.xml
